bison.output
Grammar

    0 $accept: programa $end

    1 programa: declaracoes

    2 declaracoes: declaracao
    3            | declaracoes declaracao

    4 declaracao: declaracao_variavel
    5           | declaracao_funcao
    6           | comando

    7 declaracao_variavel: DECL_CREATE tipo IDENTIFIER DECL_AS expressao DELIM_END_STATEMENT
    8                    | DECL_CREATE tipo IDENTIFIER DELIM_BRACKET_OPEN LITERAL_INT DELIM_BRACKET_CLOSE DECL_AS DECL_ARRAY DELIM_END_STATEMENT

    9 declaracao_funcao: DECL_FUNCTION tipo IDENTIFIER DELIM_PAREN_OPEN parametros DELIM_PAREN_CLOSE bloco
   10                  | DECL_FUNCTION TYPE_VOID IDENTIFIER DELIM_PAREN_OPEN parametros DELIM_PAREN_CLOSE bloco

   11 parametros: ε
   12           | lista_parametros

   13 lista_parametros: parametro
   14                 | lista_parametros DELIM_SEPARATOR parametro

   15 parametro: tipo IDENTIFIER

   16 tipo: TYPE_INT
   17     | TYPE_FLT
   18     | TYPE_CHR
   19     | TYPE_STR

   20 comando: comando_check
   21        | comando_repeat
   22        | atribuicao
   23        | comando_give
   24        | chamada_funcao DELIM_END_STATEMENT

   25 comando_check: CTRL_CHECK DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE CTRL_THEN bloco
   26              | CTRL_CHECK DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE CTRL_THEN bloco CTRL_OTHERWISE bloco

   27 comando_repeat: CTRL_REPEAT CTRL_WHILE DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE bloco

   28 comando_give: CTRL_GIVE CTRL_BACK expressao DELIM_END_STATEMENT
   29             | CTRL_GIVE CTRL_BACK DELIM_END_STATEMENT

   30 bloco: DELIM_BLOCK_OPEN comandos DELIM_BLOCK_CLOSE

   31 comandos: ε
   32         | comandos comando

   33 atribuicao: IDENTIFIER OP_ASSIGN expressao DELIM_END_STATEMENT
   34           | IDENTIFIER OP_ADD_ASSIGN expressao DELIM_END_STATEMENT

   35 expressao: termo
   36          | expressao OP_ADD termo
   37          | expressao OP_SUB termo
   38          | expressao OP_EQ termo
   39          | expressao OP_NE termo
   40          | expressao OP_LT termo
   41          | expressao OP_GT termo

   42 termo: fator
   43      | termo OP_MUL fator
   44      | termo OP_DIV fator

   45 fator: IDENTIFIER
   46      | LITERAL_INT
   47      | LITERAL_FLT
   48      | LITERAL_CHR
   49      | LITERAL_STR
   50      | DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE
   51      | chamada_funcao

   52 chamada_funcao: IDENTIFIER DELIM_PAREN_OPEN argumentos DELIM_PAREN_CLOSE

   53 argumentos: ε
   54           | lista_argumentos

   55 lista_argumentos: expressao
   56                 | lista_argumentos DELIM_SEPARATOR expressao


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <id> (258) 7 8 9 10 15 33 34 45 52
    TYPE_INT <tipo> (259) 16
    TYPE_FLT <tipo> (260) 17
    TYPE_CHR <tipo> (261) 18
    TYPE_STR <tipo> (262) 19
    TYPE_VOID <tipo> (263) 10
    DECL_CREATE (264) 7 8
    DECL_AS (265) 7 8
    DECL_ARRAY (266) 8
    DECL_FUNCTION (267) 9 10
    CTRL_CHECK (268) 25 26
    CTRL_THEN (269) 25 26
    CTRL_OTHERWISE (270) 26
    CTRL_REPEAT (271) 27
    CTRL_WHILE (272) 27
    CTRL_GIVE (273) 28 29
    CTRL_BACK (274) 28 29
    OP_ADD (275) 36
    OP_SUB (276) 37
    OP_MUL (277) 43
    OP_DIV (278) 44
    OP_ASSIGN (279) 33
    OP_ADD_ASSIGN (280) 34
    OP_EQ (281) 38
    OP_NE (282) 39
    OP_LT (283) 40
    OP_GT (284) 41
    DELIM_PAREN_OPEN (285) 9 10 25 26 27 50 52
    DELIM_PAREN_CLOSE (286) 9 10 25 26 27 50 52
    DELIM_BRACKET_OPEN (287) 8
    DELIM_BRACKET_CLOSE (288) 8
    DELIM_BLOCK_OPEN (289) 30
    DELIM_BLOCK_CLOSE (290) 30
    DELIM_END_STATEMENT (291) 7 8 24 28 29 33 34
    DELIM_SEPARATOR (292) 14 56
    LITERAL_INT (293) 8 46
    LITERAL_FLT (294) 47
    LITERAL_CHR (295) 48
    LITERAL_STR (296) 49


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    programa (43)
        on left: 1
        on right: 0
    declaracoes (44)
        on left: 2 3
        on right: 1 3
    declaracao (45)
        on left: 4 5 6
        on right: 2 3
    declaracao_variavel (46)
        on left: 7 8
        on right: 4
    declaracao_funcao (47)
        on left: 9 10
        on right: 5
    parametros (48)
        on left: 11 12
        on right: 9 10
    lista_parametros (49)
        on left: 13 14
        on right: 12 14
    parametro (50)
        on left: 15
        on right: 13 14
    tipo <tipo> (51)
        on left: 16 17 18 19
        on right: 7 8 9 15
    comando (52)
        on left: 20 21 22 23 24
        on right: 6 32
    comando_check (53)
        on left: 25 26
        on right: 20
    comando_repeat (54)
        on left: 27
        on right: 21
    comando_give (55)
        on left: 28 29
        on right: 23
    bloco (56)
        on left: 30
        on right: 9 10 25 26 27
    comandos (57)
        on left: 31 32
        on right: 30 32
    atribuicao (58)
        on left: 33 34
        on right: 22
    expressao <tipo> (59)
        on left: 35 36 37 38 39 40 41
        on right: 7 25 26 27 28 33 34 36 37 38 39 40 41 50 55 56
    termo <tipo> (60)
        on left: 42 43 44
        on right: 35 36 37 38 39 40 41 43 44
    fator <tipo> (61)
        on left: 45 46 47 48 49 50 51
        on right: 42 43 44
    chamada_funcao (62)
        on left: 52
        on right: 24 51
    argumentos (63)
        on left: 53 54
        on right: 52
    lista_argumentos (64)
        on left: 55 56
        on right: 54 56


State 0

    0 $accept: • programa $end

    IDENTIFIER     shift, and go to state 1
    DECL_CREATE    shift, and go to state 2
    DECL_FUNCTION  shift, and go to state 3
    CTRL_CHECK     shift, and go to state 4
    CTRL_REPEAT    shift, and go to state 5
    CTRL_GIVE      shift, and go to state 6

    programa             go to state 7
    declaracoes          go to state 8
    declaracao           go to state 9
    declaracao_variavel  go to state 10
    declaracao_funcao    go to state 11
    comando              go to state 12
    comando_check        go to state 13
    comando_repeat       go to state 14
    comando_give         go to state 15
    atribuicao           go to state 16
    chamada_funcao       go to state 17


State 1

   33 atribuicao: IDENTIFIER • OP_ASSIGN expressao DELIM_END_STATEMENT
   34           | IDENTIFIER • OP_ADD_ASSIGN expressao DELIM_END_STATEMENT
   52 chamada_funcao: IDENTIFIER • DELIM_PAREN_OPEN argumentos DELIM_PAREN_CLOSE

    OP_ASSIGN         shift, and go to state 18
    OP_ADD_ASSIGN     shift, and go to state 19
    DELIM_PAREN_OPEN  shift, and go to state 20


State 2

    7 declaracao_variavel: DECL_CREATE • tipo IDENTIFIER DECL_AS expressao DELIM_END_STATEMENT
    8                    | DECL_CREATE • tipo IDENTIFIER DELIM_BRACKET_OPEN LITERAL_INT DELIM_BRACKET_CLOSE DECL_AS DECL_ARRAY DELIM_END_STATEMENT

    TYPE_INT  shift, and go to state 21
    TYPE_FLT  shift, and go to state 22
    TYPE_CHR  shift, and go to state 23
    TYPE_STR  shift, and go to state 24

    tipo  go to state 25


State 3

    9 declaracao_funcao: DECL_FUNCTION • tipo IDENTIFIER DELIM_PAREN_OPEN parametros DELIM_PAREN_CLOSE bloco
   10                  | DECL_FUNCTION • TYPE_VOID IDENTIFIER DELIM_PAREN_OPEN parametros DELIM_PAREN_CLOSE bloco

    TYPE_INT   shift, and go to state 21
    TYPE_FLT   shift, and go to state 22
    TYPE_CHR   shift, and go to state 23
    TYPE_STR   shift, and go to state 24
    TYPE_VOID  shift, and go to state 26

    tipo  go to state 27


State 4

   25 comando_check: CTRL_CHECK • DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE CTRL_THEN bloco
   26              | CTRL_CHECK • DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE CTRL_THEN bloco CTRL_OTHERWISE bloco

    DELIM_PAREN_OPEN  shift, and go to state 28


State 5

   27 comando_repeat: CTRL_REPEAT • CTRL_WHILE DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE bloco

    CTRL_WHILE  shift, and go to state 29


State 6

   28 comando_give: CTRL_GIVE • CTRL_BACK expressao DELIM_END_STATEMENT
   29             | CTRL_GIVE • CTRL_BACK DELIM_END_STATEMENT

    CTRL_BACK  shift, and go to state 30


State 7

    0 $accept: programa • $end

    $end  shift, and go to state 31


State 8

    1 programa: declaracoes •
    3 declaracoes: declaracoes • declaracao

    IDENTIFIER     shift, and go to state 1
    DECL_CREATE    shift, and go to state 2
    DECL_FUNCTION  shift, and go to state 3
    CTRL_CHECK     shift, and go to state 4
    CTRL_REPEAT    shift, and go to state 5
    CTRL_GIVE      shift, and go to state 6

    $default  reduce using rule 1 (programa)

    declaracao           go to state 32
    declaracao_variavel  go to state 10
    declaracao_funcao    go to state 11
    comando              go to state 12
    comando_check        go to state 13
    comando_repeat       go to state 14
    comando_give         go to state 15
    atribuicao           go to state 16
    chamada_funcao       go to state 17


State 9

    2 declaracoes: declaracao •

    $default  reduce using rule 2 (declaracoes)


State 10

    4 declaracao: declaracao_variavel •

    $default  reduce using rule 4 (declaracao)


State 11

    5 declaracao: declaracao_funcao •

    $default  reduce using rule 5 (declaracao)


State 12

    6 declaracao: comando •

    $default  reduce using rule 6 (declaracao)


State 13

   20 comando: comando_check •

    $default  reduce using rule 20 (comando)


State 14

   21 comando: comando_repeat •

    $default  reduce using rule 21 (comando)


State 15

   23 comando: comando_give •

    $default  reduce using rule 23 (comando)


State 16

   22 comando: atribuicao •

    $default  reduce using rule 22 (comando)


State 17

   24 comando: chamada_funcao • DELIM_END_STATEMENT

    DELIM_END_STATEMENT  shift, and go to state 33


State 18

   33 atribuicao: IDENTIFIER OP_ASSIGN • expressao DELIM_END_STATEMENT

    IDENTIFIER        shift, and go to state 34
    DELIM_PAREN_OPEN  shift, and go to state 35
    LITERAL_INT       shift, and go to state 36
    LITERAL_FLT       shift, and go to state 37
    LITERAL_CHR       shift, and go to state 38
    LITERAL_STR       shift, and go to state 39

    expressao       go to state 40
    termo           go to state 41
    fator           go to state 42
    chamada_funcao  go to state 43


State 19

   34 atribuicao: IDENTIFIER OP_ADD_ASSIGN • expressao DELIM_END_STATEMENT

    IDENTIFIER        shift, and go to state 34
    DELIM_PAREN_OPEN  shift, and go to state 35
    LITERAL_INT       shift, and go to state 36
    LITERAL_FLT       shift, and go to state 37
    LITERAL_CHR       shift, and go to state 38
    LITERAL_STR       shift, and go to state 39

    expressao       go to state 44
    termo           go to state 41
    fator           go to state 42
    chamada_funcao  go to state 43


State 20

   52 chamada_funcao: IDENTIFIER DELIM_PAREN_OPEN • argumentos DELIM_PAREN_CLOSE

    IDENTIFIER        shift, and go to state 34
    DELIM_PAREN_OPEN  shift, and go to state 35
    LITERAL_INT       shift, and go to state 36
    LITERAL_FLT       shift, and go to state 37
    LITERAL_CHR       shift, and go to state 38
    LITERAL_STR       shift, and go to state 39

    $default  reduce using rule 53 (argumentos)

    expressao         go to state 45
    termo             go to state 41
    fator             go to state 42
    chamada_funcao    go to state 43
    argumentos        go to state 46
    lista_argumentos  go to state 47


State 21

   16 tipo: TYPE_INT •

    $default  reduce using rule 16 (tipo)


State 22

   17 tipo: TYPE_FLT •

    $default  reduce using rule 17 (tipo)


State 23

   18 tipo: TYPE_CHR •

    $default  reduce using rule 18 (tipo)


State 24

   19 tipo: TYPE_STR •

    $default  reduce using rule 19 (tipo)


State 25

    7 declaracao_variavel: DECL_CREATE tipo • IDENTIFIER DECL_AS expressao DELIM_END_STATEMENT
    8                    | DECL_CREATE tipo • IDENTIFIER DELIM_BRACKET_OPEN LITERAL_INT DELIM_BRACKET_CLOSE DECL_AS DECL_ARRAY DELIM_END_STATEMENT

    IDENTIFIER  shift, and go to state 48


State 26

   10 declaracao_funcao: DECL_FUNCTION TYPE_VOID • IDENTIFIER DELIM_PAREN_OPEN parametros DELIM_PAREN_CLOSE bloco

    IDENTIFIER  shift, and go to state 49


State 27

    9 declaracao_funcao: DECL_FUNCTION tipo • IDENTIFIER DELIM_PAREN_OPEN parametros DELIM_PAREN_CLOSE bloco

    IDENTIFIER  shift, and go to state 50


State 28

   25 comando_check: CTRL_CHECK DELIM_PAREN_OPEN • expressao DELIM_PAREN_CLOSE CTRL_THEN bloco
   26              | CTRL_CHECK DELIM_PAREN_OPEN • expressao DELIM_PAREN_CLOSE CTRL_THEN bloco CTRL_OTHERWISE bloco

    IDENTIFIER        shift, and go to state 34
    DELIM_PAREN_OPEN  shift, and go to state 35
    LITERAL_INT       shift, and go to state 36
    LITERAL_FLT       shift, and go to state 37
    LITERAL_CHR       shift, and go to state 38
    LITERAL_STR       shift, and go to state 39

    expressao       go to state 51
    termo           go to state 41
    fator           go to state 42
    chamada_funcao  go to state 43


State 29

   27 comando_repeat: CTRL_REPEAT CTRL_WHILE • DELIM_PAREN_OPEN expressao DELIM_PAREN_CLOSE bloco

    DELIM_PAREN_OPEN  shift, and go to state 52


State 30

   28 comando_give: CTRL_GIVE CTRL_BACK • expressao DELIM_END_STATEMENT
   29             | CTRL_GIVE CTRL_BACK • DELIM_END_STATEMENT

    IDENTIFIER           shift, and go to state 34
    DELIM_PAREN_OPEN     shift, and go to state 35
    DELIM_END_STATEMENT  shift, and go to state 53
    LITERAL_INT          shift, and go to state 36
    LITERAL_FLT          shift, and go to state 37
    LITERAL_CHR          shift, and go to state 38
    LITERAL_STR          shift, and go to state 39

    expressao       go to state 54
    termo           go to state 41
    fator           go to state 42
    chamada_funcao  go to state 43


State 31

    0 $accept: programa $end •

    $default  accept


State 32

    3 declaracoes: declaracoes declaracao •

    $default  reduce using rule 3 (declaracoes)


State 33

   24 comando: chamada_funcao DELIM_END_STATEMENT •

    $default  reduce using rule 24 (comando)


State 34

   45 fator: IDENTIFIER •
   52 chamada_funcao: IDENTIFIER • DELIM_PAREN_OPEN argumentos DELIM_PAREN_CLOSE

    DELIM_PAREN_OPEN  shift, and go to state 20

    $default  reduce using rule 45 (fator)


State 35

   50 fator: DELIM_PAREN_OPEN • expressao DELIM_PAREN_CLOSE

    IDENTIFIER        shift, and go to state 34
    DELIM_PAREN_OPEN  shift, and go to state 35
    LITERAL_INT       shift, and go to state 36
    LITERAL_FLT       shift, and go to state 37
    LITERAL_CHR       shift, and go to state 38
    LITERAL_STR       shift, and go to state 39

    expressao       go to state 55
    termo           go to state 41
    fator           go to state 42
    chamada_funcao  go to state 43


State 36

   46 fator: LITERAL_INT •

    $default  reduce using rule 46 (fator)


State 37

   47 fator: LITERAL_FLT •

    $default  reduce using rule 47 (fator)


State 38

   48 fator: LITERAL_CHR •

    $default  reduce using rule 48 (fator)


State 39

   49 fator: LITERAL_STR •

    $default  reduce using rule 49 (fator)


State 40

   33 atribuicao: IDENTIFIER OP_ASSIGN expressao • DELIM_END_STATEMENT
   36 expressao: expressao • OP_ADD termo
   37          | expressao • OP_SUB termo
   38          | expressao • OP_EQ termo
   39          | expressao • OP_NE termo
   40          | expressao • OP_LT termo
   41          | expressao • OP_GT termo

    OP_ADD               shift, and go to state 56
    OP_SUB               shift, and go to state 57
    OP_EQ                shift, and go to state 58
    OP_NE                shift, and go to state 59
    OP_LT                shift, and go to state 60
    OP_GT                shift, and go to state 61
    DELIM_END_STATEMENT  shift, and go to state 62


State 41

   35 expressao: termo •
   43 termo: termo • OP_MUL fator
   44      | termo • OP_DIV fator

    OP_MUL  shift, and go to state 63
    OP_DIV  shift, and go to state 64

    $default  reduce using rule 35 (expressao)


State 42

   42 termo: fator •

    $default  reduce using rule 42 (termo)


State 43

   51 fator: chamada_funcao •

    $default  reduce using rule 51 (fator)


State 44

   34 atribuicao: IDENTIFIER OP_ADD_ASSIGN expressao • DELIM_END_STATEMENT
   36 expressao: expressao • OP_ADD termo
   37          | expressao • OP_SUB termo
   38          | expressao • OP_EQ termo
   39          | expressao • OP_NE termo
   40          | expressao • OP_LT termo
   41          | expressao • OP_GT termo

    OP_ADD               shift, and go to state 56
    OP_SUB               shift, and go to state 57
    OP_EQ                shift, and go to state 58
    OP_NE                shift, and go to state 59
    OP_LT                shift, and go to state 60
    OP_GT                shift, and go to state 61
    DELIM_END_STATEMENT  shift, and go to state 65


State 45

   36 expressao: expressao • OP_ADD termo
   37          | expressao • OP_SUB termo
   38          | expressao • OP_EQ termo
   39          | expressao • OP_NE termo
   40          | expressao • OP_LT termo
   41          | expressao • OP_GT termo
   55 lista_argumentos: expressao •

    OP_ADD  shift, and go to state 56
    OP_SUB  shift, and go to state 57
    OP_EQ   shift, and go to state 58
    OP_NE   shift, and go to state 59
    OP_LT   shift, and go to state 60
    OP_GT   shift, and go to state 61
